Barra de progreso home y detalles de ficha individual

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -101,36 +101,34 @@
               <div class="card-header py-3">
                 <h6 class="m-0 font-weight-bold text-primary">Ordenes de trabajo:</h6>
               </div>
-              <div class="card-body">
-                <h4 class="small font-weight-bold">OT 1: Marca-modelo1
-                  <span class="float-right">20%</span>
+              <div class="card-body" *ngFor="let ot of ordenTrabajoAct$.data; let i=index">
+                <h4 class="small font-weight-bold">OT{{ot.ordenTrabajo}}: {{ot.nombre}} {{ot.apellido_p}} {{ot.apellido_m}} 
+                  <span class="float-right">{{otPorc[i].porcentaje}}%</span>
                 </h4>
-                <div class="progress mb-4">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <h4 class="small font-weight-bold">OT 2: Marca-modelo2
-                  <span class="float-right">40%</span>
-                </h4>
-                <div class="progress mb-4">
-                  <div class="progress-bar bg-warning" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <h4 class="small font-weight-bold">OT 3: Marca-modelo3
-                  <span class="float-right">60%</span>
-                </h4>
-                <div class="progress mb-4">
-                  <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <h4 class="small font-weight-bold">OT 4: Marca-modelo4
-                  <span class="float-right">80%</span>
-                </h4>
-                <div class="progress mb-4">
-                  <div class="progress-bar bg-info" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <h4 class="small font-weight-bold">OT 0: Marca-modelo0
-                  <span class="float-right">Complete!</span>
-                </h4>
-                <div class="progress">
-                  <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+
+
+                <div class="progress mb-4" >
+                  <div class="progress-bar" *ngIf="otPorc[i].porcentaje >0" role="progressbar" style="width:1%; background-color:#da4f4a;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                  <div class="progress-bar" *ngIf="otPorc[i].porcentaje >5" role="progressbar" style="width:5%; background-color:#da4f4a;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                  <div class="progress-bar" *ngIf="otPorc[i].porcentaje >10" role="progressbar" style="width:5%; background-color:#e66f4b;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                  <div class="progress-bar" *ngIf="otPorc[i].porcentaje >15" role="progressbar" style="width:5%; background-color:#e66f4b;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                  <div class="progress-bar" *ngIf="otPorc[i].porcentaje >20" role="progressbar" style="width:5%; background-color:#f08e52;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                  <div class="progress-bar" *ngIf="otPorc[i].porcentaje >25" role="progressbar" style="width:5%; background-color:#f08e52;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                  <div class="progress-bar" *ngIf="otPorc[i].porcentaje >30" role="progressbar" style="width:5%; background-color:#f6ac5e;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                  <div class="progress-bar" *ngIf="otPorc[i].porcentaje >35" role="progressbar" style="width:5%; background-color:#f6ac5e;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                  <div class="progress-bar" *ngIf="otPorc[i].porcentaje >40" role="progressbar" style="width:5%; background-color:#fbc971;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                  <div class="progress-bar" *ngIf="otPorc[i].porcentaje >45" role="progressbar" style="width:5%; background-color:#fbc971;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                  <div class="progress-bar" *ngIf="otPorc[i].porcentaje >50" role="progressbar" style="width:5%; background-color:#ffe68a;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                  <div class="progress-bar" *ngIf="otPorc[i].porcentaje >55" role="progressbar" style="width:5%; background-color:#e2dd7a;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                  <div class="progress-bar" *ngIf="otPorc[i].porcentaje >60" role="progressbar" style="width:5%; background-color:#e2dd7a;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                  <div class="progress-bar" *ngIf="otPorc[i].porcentaje >65" role="progressbar" style="width:5%; background-color:#c4d46d;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                  <div class="progress-bar" *ngIf="otPorc[i].porcentaje >70" role="progressbar" style="width:5%; background-color:#c4d46d;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                  <div class="progress-bar" *ngIf="otPorc[i].porcentaje >75" role="progressbar" style="width:5%; background-color:#a4cb64;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                  <div class="progress-bar" *ngIf="otPorc[i].porcentaje >80" role="progressbar" style="width:5%; background-color:#a4cb64;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                  <div class="progress-bar" *ngIf="otPorc[i].porcentaje >85" role="progressbar" style="width:5%; background-color:#82c15e;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                  <div class="progress-bar" *ngIf="otPorc[i].porcentaje >90" role="progressbar" style="width:5%; background-color:#82c15e;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                  <div class="progress-bar" *ngIf="otPorc[i].porcentaje >95" role="progressbar" style="width:5%; background-color:#5ab75c;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
+                  <div class="progress-bar" *ngIf="otPorc[i].porcentaje >98" role="progressbar" style="width:4%; background-color:#5ab75c;" aria-valuenow="20" aria-valuemin="0"  aria-valuemax="100"></div>
                 </div>
               </div>
             </div>
@@ -138,15 +136,6 @@
         </div>
       </div>
     </div>
-
-    <div>
-      <p>Hola</p>
-      <div *ngFor="let c of cliente$.data">
-        <p>{{c.id}}</p>
-      </div>
-      <p>Adios</p>
-    </div>
-
 
     <div class="footer">
       <img style="width:100% !important;" src="../assets/img/footer1.png" alt=""/>
