--- a/src/app/ficha-ind/ficha-ind.component.html
+++ b/src/app/ficha-ind/ficha-ind.component.html
@@ -96,7 +96,7 @@
             </div>
 
             <div class="row">
-              <div class="col-12" style="color:#4C4C4E; padding-left: 2%; ">
+              <div class="col-10" style="color:#4C4C4E; padding-left: 10%;">
                 <br>
                 <div class="table-responsive">
                   <table class="table table-bordered">
@@ -104,7 +104,6 @@
                       <tr class="table-info">
                         <th class="col-1 text-center table-info">#</th>
                         <th class="col-4 text-center ">Actividad</th>
-                        <th class="col-3 text-center ">Fecha de completado</th>
                         <th class="col-2 text-center  ">Estado</th>
                         <th class="col-3 text-center "></th>
                       </tr>
@@ -113,19 +112,38 @@
                       <tr *ngFor="let act of ActividadeOT$.data">
                         <th class="table-info text-center" scope="row">{{act.actividad_id}}</th>
                         <td class="text-center">{{act.actividad}}</td>
-                        <td class="text-center">{{act.fecha_finalizado}}</td>
                         <td class="text-center">{{act.estado}}</td>
                         <td class="text-center">
                           <div class="row">
-                            <div class="col">
-                              <a (click)="gotoDetailsAct(act.idRelacion)" class="btn btn-light" style="color:white;">
-                                <img  src="../assets/icons/svg/edit(2).svg"  width="20" class="d-inline-block align-center" alt="">
-                              </a>
+                            <div class="col" *ngIf="act.estado != 'No aplica' ">
+                              <button (click)="gotoDetailsAct(act.idRelacion)" class="btn btn-light" style="color:white;">
+                                <img  src="../assets/icons/svg/edit(2).svg"  width="50" class="d-inline-block align-center" alt="">
+                              </button>
                             </div>
-                            <div class ="col">
-                              <a (click)="NoAplica(act.idRelacion)" class="btn btn-light" style="color:white;">
-                                <img  src="../assets/icons/svg/delete_c.svg"  width="20" class="d-inline-block align-center" alt="">
-                              </a>
+                            <div class="col" *ngIf="act.estado == 'No aplica' ">
+                              <button (click)="gotoDetailsAct(act.idRelacion)" disabled class="btn btn-light" style="color:white;">
+                                <img  src="../assets/icons/svg/edit(2).svg"  width="50" class="d-inline-block align-center" alt="">
+                              </button>
+                            </div>
+                            <div class ="col" *ngIf="!act.estado">
+                              <button (click)="Estado(act.idRelacion, 'Aplica')" class="btn btn-light" style="color:white;">
+                                <img  src="../assets/icons/svg/check_3.svg"  width="50" class="d-inline-block align-center" alt="">
+                              </button>
+                            </div>
+                            <div class ="col" *ngIf="act.estado">
+                              <button (click)="Estado(act.idRelacion, 'Aplica')" disabled class="btn btn-light" style="color:white;">
+                                <img  src="../assets/icons/svg/check_3.svg"  width="50" class="d-inline-block align-center" alt="">
+                              </button>
+                            </div>
+                            <div class ="col" *ngIf="act.estado == 'No aplica' || !act.estado">
+                              <button (click)="Estado(act.idRelacion, 'No aplica')" class="btn btn-light" style="color:white;">
+                                <img  src="../assets/icons/svg/equis_3.svg"  width="50" class="d-inline-block align-center" alt="">
+                              </button>
+                            </div>
+                            <div class ="col" *ngIf="act.estado == 'Aplica' || act.estado == 'Iniciada' || act.estado == 'Finalizada'">
+                              <button (click)="Estado(act.idRelacion, 'No aplica')" disabled class="btn btn-light" style="color:white;">
+                                <img  src="../assets/icons/svg/equis_3.svg"  width="50" class="d-inline-block align-center" alt="">
+                              </button>
                             </div>
                           </div>
                         </td>
