--- a/src/app/ficha/ficha.component.html
+++ b/src/app/ficha/ficha.component.html
@@ -33,6 +33,16 @@
                 <h2>Órdenes de Trabajo</h2>
                 <br>
               </div>
+              <div class="col-2-sm" style="margin-left: 5%;">
+                <button class="btn btn-light" type="button" name="button" (click)="GenerarOT()">
+                  <div class="row" style="margin-left:10%">
+                    <img class="d-inline-block align-center" src="../assets/icons/svg/order.svg"  width="60" alt="">
+                  </div>
+                  <div class="row">
+                    <h6>Generar Nueva</h6>
+                  </div>
+                </button>
+              </div>
             </div>
               <table class="table table-bordered">
                 <thead class="table-info">
