--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,31 +4,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>Dashboard General</title>
   <!-- Custom fonts for this template-->
   <link href="./assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <!-- Custom styles for this template-->
   <link href="./assets/css/sb-admin-2.min.css" rel="stylesheet">
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-  <!-- Bootstrap core JavaScript-->
-  <script src="./assets/vendor/jquery/jquery.min.js"></script>
-  <script src="./assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="./assets/vendor/jquery-easing/jquery.easing.min.js"></script>
-  <script src="./assets/js/sb-admin-2.min.js"></script>
-  <script src="./assets/vendor/chart.js/Chart.min.js"></script>
 </head>
 
 <body>
-	<div style="background-image: url('./assets/img/background3.jpg'); background-position: center; background-size: cover;">
-		<div class="container" style="height: 580px">
+    <a class="navbar-brand" routerLink="/">
+      <img style="padding:10px; margin-left: 15px; margin-right: 15px;" src="./assets/img/rozto-logo.png"  width="100px" class="d-inline-block align-center" alt="">
+    </a>
+    <div class="container">
 			<div class="card card-container" >
 				<img class="profile-img-card" src="./assets/icons/png/user2.png" alt="" />
 				<form [formGroup]="loginForm" (ngSubmit)="loginUser()">
-					<h5 *ngIf="success">Your form is valid!</h5>
-					<h3 class='subtitle'>{{ title }}</h3>
-					<span id="reauth-email" class="reauth-email"></span>
 					<div class="input-group mb-3">
 					  <div class="input-group-prepend">
 					    <span class="input-group-text" id="basic-addon1">
@@ -56,8 +46,4 @@
 				</form>
 			</div>
 		</div>
-	</div>
-    <div class="footer" style="background-color: white">
-    	<img style="width:100% !important;" src="./assets/img/footer1.png" alt=""/>
-    </div>
 </body>
