--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -31,16 +31,13 @@
         <img style="padding:10px; padding-left: 5px;" src="./assets/icons/svg/worker.svg" width="45" class="d-inline-block align-center" alt="">Clientes
       </a>
       <a class="btn btn-outline-danger"  type="button" routerLink="/ficha">
-        <img style="padding:10px; padding-left: 5px;"  src="./assets/icons/svg/helmet.svg" width="45" class="d-inline-block align-center" alt="">Ordenes de Trabajo
+        <img style="padding:10px; padding-left: 5px;"  src="./assets/icons/svg/helmet_c.svg" width="45" class="d-inline-block align-center" alt="">Ordenes de Trabajo
       </a>
-      <a class="btn btn-outline-danger"  type="button" routerLink="/nueva-moto">
-        <img style="padding:10px; padding-left: 5px;" src="./assets/icons/svg/motorcycle.svg" width="45" class="d-inline-block align-center" alt="">Nuevo modelo
+      <a class="btn btn-outline-danger"  type="button" routerLink="/new">
+        <img style="padding:10px; padding-left: 5px;" src="./assets/icons/svg/add-file(1).svg" width="45" class="d-inline-block align-center" alt="">Agregar nuevo
       </a>
-      <a class="btn btn-outline-danger"  type="button" routerLink="/nueva-actividad">
-        <img style="padding:10px; padding-left: 5px;"  src="./assets/icons/svg/workflow.svg" width="45" class="d-inline-block align-center" alt="">Nueva actividad
-      </a>
-      <a class="btn btn-outline-danger"  type="button" routerLink="/nuevo-producto">
-        <img style="padding:10px; padding-left: 5px;" src="./assets/icons/svg/settings.svg" width="45" class="d-inline-block align-center" alt="">Nuevo producto
+      <a class="btn btn-outline-danger"  type="button" routerLink="/charts">
+        <img style="padding:10px; padding-left: 5px;" src="./assets/icons/svg/stats.svg" width="45" class="d-inline-block align-center" alt="">Agregar nuevo
       </a>
     </div>
   </mat-toolbar-row>
